新增商品相关接口
